--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Bolt - Free Bootstrap 3 Title</title>
+    <meta name=”description“ content=“This is my portfolio site.“>
+    <meta name=”keyword“ content=“bolt,bootstrap,portfolio“>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="format-detection" content="telephone=no">
@@ -10,6 +14,117 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-
+    <header class="header">
+      <div class="inner header-inner">
+        <i class="fas fa-bolt"></i>
+        <a href="#" class="contact">
+          <h1 class="contact__text">contact</h1>
+        </a>
+      </div> 
+    </header>
+    <main class="main">
+      <div class="title">
+        <div class="inner title-inner">
+          <h1 class="title__main">Bolt Theme</h1>
+          <h2 class="title__sub">FREE BOOTSTRAP THEMES</h2>
+        </div>
+      </div>
+      <section>
+        <div class="what">
+          <div class="inner what-inner">
+            <img class="what__iphone" src="img/iphone.png" alt="">
+            <div class="what__title__text">
+              <h1 class="what__title">WHAT WE CAN DO?</h1>
+              <p class="what__text">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <article>
+        <div class="our">
+          <div class="inner our-inner">
+            <h1 class="our__title">OUR LATEST WORK</h1>
+            <div class="our__contents">
+              <a href="#" class="our__content">
+                <img src="img/01.jpg" alt="">
+              </a>
+              <a href="#" class="our__content">
+                <img src="img/02.jpg" alt="">
+              </a>
+              <a href="#" class="our__content">
+                <img src="img/03.jpg" alt="">
+              </a>
+              <a href="#" class="our__content">
+                <img src="img/04.jpg" alt="">
+              </a>
+              <a href="#" class="our__content">
+                <img src="img/05.jpg" alt="">
+              </a>
+              <a href="#" class="our__content">
+                <img src="img/06.jpg" alt="">
+              </a>
+            </div>
+            <div class="our__message">
+              <p class="our__text">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
+              </p>
+              <a href="#" class="our__email">
+                <h1 class="our__email__text">Email Me!</h1>
+              </a>
+            </div>
+          </div>
+        </div>
+      </article>
+      <section>
+        <div class="skill">
+          <div class="inner skill-inner">
+            <h1 class="skill__title">OUR SKILLS</h1>
+            <div class="skill__contents">
+              <div class="skill__content">
+                <img src="img/circle_01.png" alt="">
+                <h1 class="skill__name">JavaScript</h1>
+              </div>
+              <div class="skill__content">
+                <img src="img/circle_02.png" alt="">
+                <h1 class="skill__name">Bootstrap</h1>
+              </div>
+              <div class="skill__content">
+                <img src="img/circle_03.png" alt="">
+                <h1 class="skill__name">WordPress</h1>
+              </div>
+              <div class="skill__content">
+                <img src="img/circle_04.png" alt="">
+                <h1 class="skill__name">Photshop</h1>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <nav class="nav">
+        <div class="inner nav-inner">
+          <div class="nav__icons">
+            <a href="#" class="nav__icon">
+              <i class="sns fab fa-facebook-f"></i>
+            </a>
+            <a href="#" class="nav__icon">
+              <i class="sns fab fa-dribbble"></i>
+            </a>
+            <a href="#" class="nav__icon">
+              <i class="sns fab fa-twitter"></i>
+            </a>
+            <a href="#" class="nav__icon">
+              <i class="sns fas fa-envelope"></i>
+            </a>
+          </div>
+        </div>
+      </nav>
+    </main>
+    <footer class="footer">
+      <div class="inner footer-inner">
+        <h1 class="footer__text">Craftedwith🤍byBlackTio.co.</h1>
+      </div>
+    </footer>
   </body>
 </html>
