--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="title">
         <div class="inner title-inner">
           <h1 class="title__main">Bolt Theme</h1>
-          <h2 class="title__sub">FREE BOOTSTRAP THEMES</h2>
+          <p class="title__sub">FREE BOOTSTRAP THEMES</p>
         </div>
       </div>
       <section>
@@ -34,7 +34,7 @@
           <div class="inner what-inner">
             <img class="what__iphone" src="img/iphone.png" alt="">
             <div class="what__title__text">
-              <h1 class="what__title">WHAT WE CAN DO?</h1>
+              <p class="what__title">WHAT WE CAN DO?</p>
               <p class="what__text">
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
               </p>
@@ -45,27 +45,39 @@
       <article>
         <div class="our">
           <div class="inner our-inner">
-            <h1 class="our__title">OUR LATEST WORK</h1>
-            <div class="our__contents">
-              <a href="#" class="our__content">
-                <img src="img/01.jpg" alt="">
-              </a>
-              <a href="#" class="our__content">
-                <img src="img/02.jpg" alt="">
-              </a>
-              <a href="#" class="our__content">
-                <img src="img/03.jpg" alt="">
-              </a>
-              <a href="#" class="our__content">
-                <img src="img/04.jpg" alt="">
-              </a>
-              <a href="#" class="our__content">
-                <img src="img/05.jpg" alt="">
-              </a>
-              <a href="#" class="our__content">
-                <img src="img/06.jpg" alt="">
-              </a>
-            </div>
+            <p class="our__title">OUR LATEST WORK</p>
+            <ul class="our__contents">
+              <li>
+                <a href="#" class="our__content">
+                  <img src="img/01.jpg" alt="">
+                </a>
+              </li>
+              <li>
+                <a href="#" class="our__content">
+                  <img src="img/02.jpg" alt="">
+                </a>
+              </li>
+              <li>
+                <a href="#" class="our__content">
+                  <img src="img/03.jpg" alt="">
+                </a>
+              </li>
+              <li>
+                <a href="#" class="our__content">
+                  <img src="img/04.jpg" alt="">
+                </a>
+              </li>
+              <li>
+                <a href="#" class="our__content">
+                  <img src="img/05.jpg" alt="">
+                </a>
+              </li>
+              <li>
+                <a href="#" class="our__content">
+                  <img src="img/06.jpg" alt="">
+                </a>
+              </li>
+            </ul>
             <div class="our__message">
               <p class="our__text">
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
@@ -81,48 +93,56 @@
         <div class="skill">
           <div class="inner skill-inner">
             <h1 class="skill__title">OUR SKILLS</h1>
-            <div class="skill__contents">
-              <div class="skill__content">
+            <ul class="skill__contents">
+              <li class="skill__content">
                 <img src="img/circle_01.png" alt="">
                 <h1 class="skill__name">JavaScript</h1>
-              </div>
-              <div class="skill__content">
+              </li>
+              <li class="skill__content">
                 <img src="img/circle_02.png" alt="">
                 <h1 class="skill__name">Bootstrap</h1>
-              </div>
-              <div class="skill__content">
+              </li>
+              <li class="skill__content">
                 <img src="img/circle_03.png" alt="">
                 <h1 class="skill__name">WordPress</h1>
-              </div>
-              <div class="skill__content">
+              </li>
+              <li class="skill__content">
                 <img src="img/circle_04.png" alt="">
                 <h1 class="skill__name">Photshop</h1>
-              </div>
-            </div>
+              </li>
+            </ul>
           </div>
         </div>
       </section>
       <nav class="nav">
         <div class="inner nav-inner">
-          <div class="nav__icons">
-            <a href="#" class="nav__icon">
-              <i class="sns fab fa-facebook-f"></i>
-            </a>
-            <a href="#" class="nav__icon">
-              <i class="sns fab fa-dribbble"></i>
-            </a>
-            <a href="#" class="nav__icon">
-              <i class="sns fab fa-twitter"></i>
-            </a>
-            <a href="#" class="nav__icon">
-              <i class="sns fas fa-envelope"></i>
-            </a>
-          </div>
+          <ul class="nav__icons">
+            <li>
+              <a href="#" class="nav__icon">
+                <i class="sns fab fa-facebook-f"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="nav__icon">
+                <i class="sns fab fa-dribbble"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="nav__icon">
+                <i class="sns fab fa-twitter"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="nav__icon">
+                <i class="sns fas fa-envelope"></i>
+              </a>
+            </li>
+          </ul>
         </div>
       </nav>
     </main>
     <footer class="footer">
-      <div class="inner footer-inner">
+      <div class="inner footer-inner clearfix">
         <h1 class="footer__text">Craftedwith🤍byBlackTio.co.</h1>
       </div>
     </footer>
