--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="inner header-inner">
         <i class="fas fa-bolt"></i>
         <a href="#" class="contact">
-          <h1 class="contact__text">contact</h1>
+          <p class="contact__text">contact</p>
         </a>
       </div> 
     </header>
@@ -34,7 +34,7 @@
           <div class="inner what-inner">
             <img class="what__iphone" src="img/iphone.png" alt="">
             <div class="what__title__text">
-              <p class="what__title">WHAT WE CAN DO?</p>
+              <h2 class="what__title">WHAT WE CAN DO?</h2>
               <p class="what__text">
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
               </p>
@@ -45,7 +45,7 @@
       <article>
         <div class="our">
           <div class="inner our-inner">
-            <p class="our__title">OUR LATEST WORK</p>
+            <h2 class="our__title">OUR LATEST WORK</h2>
             <ul class="our__contents">
               <li>
                 <a href="#" class="our__content">
@@ -83,7 +83,7 @@
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
               </p>
               <a href="#" class="our__email">
-                <h1 class="our__email__text">Email Me!</h1>
+                <p class="our__email__text">Email Me!</p>
               </a>
             </div>
           </div>
@@ -92,23 +92,23 @@
       <section>
         <div class="skill">
           <div class="inner skill-inner">
-            <h1 class="skill__title">OUR SKILLS</h1>
+            <h2 class="skill__title">OUR SKILLS</h2>
             <ul class="skill__contents">
               <li class="skill__content">
                 <img src="img/circle_01.png" alt="">
-                <h1 class="skill__name">JavaScript</h1>
+                <p class="skill__name">JavaScript</p>
               </li>
               <li class="skill__content">
                 <img src="img/circle_02.png" alt="">
-                <h1 class="skill__name">Bootstrap</h1>
+                <p class="skill__name">Bootstrap</p>
               </li>
               <li class="skill__content">
                 <img src="img/circle_03.png" alt="">
-                <h1 class="skill__name">WordPress</h1>
+                <p class="skill__name">WordPress</p>
               </li>
               <li class="skill__content">
                 <img src="img/circle_04.png" alt="">
-                <h1 class="skill__name">Photshop</h1>
+                <p class="skill__name">Photshop</p>
               </li>
             </ul>
           </div>
@@ -143,7 +143,7 @@
     </main>
     <footer class="footer">
       <div class="inner footer-inner clearfix">
-        <h1 class="footer__text">Craftedwith🤍byBlackTio.co.</h1>
+        <p class="footer__text">Craftedwith&hearts;byBlackTio.co.</p>
       </div>
     </footer>
   </body>
