--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header class="header">
-      <div class="inner header-inner">
-        <i class="fas fa-bolt"></i>
-        <a href="#" class="contact">
-          <p class="contact__text">contact</p>
+    <header class="header background-color-fff">
+      <div class="inner header-inner flex">
+        <i class="fas fa-bolt color-4e"></i>
+        <a href="#" class="dis-inline-block theme-background-color">
+          <p class="contact__text color-fff">contact</p>
         </a>
       </div> 
     </header>
     <main class="main">
-      <div class="title">
-        <div class="inner title-inner">
-          <h1 class="title__main">Bolt Theme</h1>
-          <p class="title__sub">FREE BOOTSTRAP THEMES</p>
+      <div class="title background-color-f2">
+        <div class="inner title-inner text-center">
+          <h1 class="title__main theme-color">Bolt Theme</h1>
+          <p class="title__sub color-c0 font-raleway">FREE BOOTSTRAP THEMES</p>
         </div>
       </div>
       <section>
-        <div class="what">
-          <div class="inner what-inner">
-            <img class="what__iphone" src="img/iphone.png" alt="">
-            <div class="what__title__text">
-              <h2 class="what__title">WHAT WE CAN DO?</h2>
+        <div class="what theme-background-color">
+          <div class="inner what-inner flex">
+            <img class="what__iphone" src="img/iphone.png" alt="iphone">
+            <div class="what__title__text text-center color-fff">
+              <h2 class="what__title font-raleway">WHAT WE CAN DO?</h2>
               <p class="what__text">
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
               </p>
@@ -43,107 +43,107 @@
         </div>
       </section>
       <article>
-        <div class="our">
+        <div class="our background-color-f2">
           <div class="inner our-inner">
-            <h2 class="our__title">OUR LATEST WORK</h2>
+            <h2 class="our__title color-4e text-center font-raleway">OUR LATEST WORK</h2>
             <ul class="our__contents">
               <li>
-                <a href="#" class="our__content">
-                  <img src="img/01.jpg" alt="">
+                <a href="#">
+                  <img src="img/01.jpg" alt="img01">
                 </a>
               </li>
               <li>
-                <a href="#" class="our__content">
-                  <img src="img/02.jpg" alt="">
+                <a href="#">
+                  <img src="img/02.jpg" alt="img02">
                 </a>
               </li>
               <li>
-                <a href="#" class="our__content">
-                  <img src="img/03.jpg" alt="">
+                <a href="#">
+                  <img src="img/03.jpg" alt="img03">
                 </a>
               </li>
               <li>
-                <a href="#" class="our__content">
-                  <img src="img/04.jpg" alt="">
+                <a href="#">
+                  <img src="img/04.jpg" alt="img04">
                 </a>
               </li>
               <li>
-                <a href="#" class="our__content">
-                  <img src="img/05.jpg" alt="">
+                <a href="#">
+                  <img src="img/05.jpg" alt="img05">
                 </a>
               </li>
               <li>
-                <a href="#" class="our__content">
-                  <img src="img/06.jpg" alt="">
+                <a href="#">
+                  <img src="img/06.jpg" alt="img06">
                 </a>
               </li>
             </ul>
-            <div class="our__message">
-              <p class="our__text">
+            <div class="our__message text-center">
+              <p class="our__text color-4e dis-inline-block">
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
               </p>
-              <a href="#" class="our__email">
-                <p class="our__email__text">Email Me!</p>
+              <a href="#" class="our__email dis-inline-block theme-background-color">
+                <p class="our__email__text color-fff">Email Me!</p>
               </a>
             </div>
           </div>
         </div>
       </article>
       <section>
-        <div class="skill">
+        <div class="skill background-color-4e">
           <div class="inner skill-inner">
-            <h2 class="skill__title">OUR SKILLS</h2>
-            <ul class="skill__contents">
-              <li class="skill__content">
-                <img src="img/circle_01.png" alt="">
-                <p class="skill__name">JavaScript</p>
+            <h2 class="skill__title text-center color-fff font-raleway">OUR SKILLS</h2>
+            <ul class="skill__contents flex">
+              <li>
+                <img src="img/circle_01.png" alt="circle_01">
+                <p>JavaScript</p>
               </li>
-              <li class="skill__content">
-                <img src="img/circle_02.png" alt="">
-                <p class="skill__name">Bootstrap</p>
+              <li>
+                <img src="img/circle_02.png" alt="circle_02">
+                <p>Bootstrap</p>
               </li>
-              <li class="skill__content">
-                <img src="img/circle_03.png" alt="">
-                <p class="skill__name">WordPress</p>
+              <li>
+                <img src="img/circle_03.png" alt="circle_03">
+                <p>WordPress</p>
               </li>
-              <li class="skill__content">
-                <img src="img/circle_04.png" alt="">
-                <p class="skill__name">Photshop</p>
+              <li>
+                <img src="img/circle_04.png" alt="circle_04">
+                <p>Photshop</p>
               </li>
             </ul>
           </div>
         </div>
       </section>
-      <nav class="nav">
+      <nav class="nav background-color-f2">
         <div class="inner nav-inner">
-          <ul class="nav__icons">
+          <ul class="nav__icons flex">
             <li>
-              <a href="#" class="nav__icon">
-                <i class="sns fab fa-facebook-f"></i>
+              <a href="#">
+                <i class="sns text-center dis-inline-block theme-color fab fa-facebook-f"></i>
               </a>
             </li>
             <li>
-              <a href="#" class="nav__icon">
-                <i class="sns fab fa-dribbble"></i>
+              <a href="#">
+                <i class="sns text-center dis-inline-block theme-color fab fa-dribbble"></i>
               </a>
             </li>
             <li>
-              <a href="#" class="nav__icon">
-                <i class="sns fab fa-twitter"></i>
+              <a href="#">
+                <i class="sns text-center dis-inline-block theme-color fab fa-twitter"></i>
               </a>
             </li>
             <li>
-              <a href="#" class="nav__icon">
-                <i class="sns fas fa-envelope"></i>
+              <a href="#">
+                <i class="sns text-center dis-inline-block theme-color fas fa-envelope"></i>
               </a>
             </li>
           </ul>
         </div>
       </nav>
     </main>
-    <footer class="footer">
+    <footer class="footer theme-background-color">
       <div class="inner footer-inner clearfix">
-        <p class="footer__text">Craftedwith&hearts;byBlackTio.co.</p>
+        <p class="footer__text color-fff">Craftedwith&hearts;byBlackTio.co.</p>
       </div>
     </footer>
   </body>
