--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       </nav>
     </main>
     <footer class="footer theme-background-color">
-      <div class="inner footer-inner clearfix">
+      <div class="inner footer-inner">
         <p class="footer__text color-fff">Craftedwith&hearts;byBlackTio.co.</p>
       </div>
     </footer>
