bolt レスポンシブ fin

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     <header class="header background-color-fff">
       <div class="inner header-inner flex">
         <i class="fas fa-bolt color-4e"></i>
-        <a href="#" class="dis-inline-block theme-background-color">
+        <div class="hanbaga d-none">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <a href="#" class="contact dis-inline-block theme-background-color">
           <p class="contact__text color-fff">contact</p>
         </a>
       </div> 
@@ -25,8 +30,16 @@
     <main class="main">
       <div class="title background-color-f2">
         <div class="inner title-inner text-center">
-          <h1 class="title__main theme-color">Bolt Theme</h1>
-          <p class="title__sub color-c0 font-raleway">FREE BOOTSTRAP THEMES</p>
+          <h1 class="title__main theme-color">
+            Bolt
+            <br class="br-sp">
+            Theme
+          </h1>
+          <p class="title__sub color-c0 font-raleway">
+            FREE BOOTSTRAP
+            <br class="br-sp">
+            THEMES
+          </p>
         </div>
       </div>
       <section>
