bolt レスポンシブ　修正

--- a/index.html
+++ b/index.html
@@ -30,15 +30,11 @@
     <main class="main">
       <div class="title background-color-f2">
         <div class="inner title-inner text-center">
-          <h1 class="title__main theme-color">
-            Bolt
-            <br class="br-sp">
-            Theme
+          <h1 class="br-sp title__main theme-color">
+            Bolt Theme
           </h1>
-          <p class="title__sub color-c0 font-raleway">
-            FREE BOOTSTRAP
-            <br class="br-sp">
-            THEMES
+          <p class="br-sp title__sub color-c0 font-raleway">
+            FREE BOOTSTRAP THEMES
           </p>
         </div>
       </div>
